# blackrock-hackathon-project

./: Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: push_image.yml
docs/: FUTURE_SCOPE.md
service/micro_savings/app/: __main__.py
service/micro_savings/app/api/: application.py  lifespan.py
service/micro_savings/app/api/endpoints/: router.py
service/micro_savings/app/api/endpoints/ceiling/: ceiling_service.py
service/micro_savings/app/api/endpoints/date/: date_utils.py
service/micro_savings/app/api/endpoints/filter/: __init__.py  filter.py  test_filter.py
service/micro_savings/app/api/endpoints/monitoring/: __init__.py
service/micro_savings/app/api/endpoints/parse/: __init__.py  parse.py  test_parse.py
service/micro_savings/app/exceptions/: exceptions.py
service/micro_savings/app/models/: filter.py  periods.py  returns.py  transaction.py  validator.py
service/micro_savings/app/transaction_engine/ceiling_processor/: ceiling_service.py
service/micro_savings/app/transaction_engine/filter_processor/: qpk_service.py
service/micro_savings/app/transaction_engine/returns_processor/: returns_service.py
service/micro_savings/app/transaction_engine/tax_processor/: tax_service.py
service/micro_savings/app/transaction_engine/validation_processor/: validation_service.py
service/micro_savings/app/utils/: date_utils.py  logging.py  settings.py
service/tests/micro_savings/: performance_utils.py  test_exception.py  test_filter.py  test_parse.py  test_returns.py  test_tax.py  test_validator.py
(+16 files in other folders)
